changed canvas min-height to fix whitespace

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
-  min-height: 100%
+  min-height: 110%
 }
 
 :root {
